tests/errors/test-error-004.slax
version 1.0

var $test = 4;

The parser does not recover from errors in the "version" statement.
